# nexus

./: .dockerignore  .gitignore  .gitmodules  Builtins-DESTROY.cc  Builtins-DUMP.cc  Builtins-EMIT.cc  Builtins-EXAMINE.cc  Builtins-FLAG.cc  Builtins-GO.cc  Builtins-HELP.cc  Builtins-QUIT.cc  Builtins-RENAME.cc  Builtins-SET.cc  Builtins-TELEPORT.cc  Builtins.cc  Command.cc  Container.cc  Database.cc  Dockerfile  Limbo.cc  Makefile  Makefile.am  Parsers.cc  README.md  Thing-Flags.cc  Thing-Props.cc  Thing-Verbs.cc  Thing.cc  Universe-Create.cc  Universe-Schema.cc  Universe.cc  Zone.cc  builder.cc  configure.ac  debug-builder.sh.in  migratedb.cc  nexus-builder.sh.in  nexus-createdb.sh.in  nexus-migratedb.sh.in  valgrind-builder.sh.in
.devcontainer/: devcontainer.json
Headers/Nexus/: Actor.hh  Channel.hh  Commands.hh  Container.hh  Database.hh  Executable.hh  Hologram.hh  Limbo.hh  Module.hh  Player.hh  Portal.hh  Robot.hh  Room.hh  Thing.hh  Tokens.hh  Universe.hh  Variable.hh  Zone.hh
Sources/: Actor.cc  Builtins-COMMANDS.cc  Builtins-CREATE.cc  Builtins-DISABLE.cc  Builtins-ENABLE.cc  Builtins-HELP.cc  Builtins-LOOK.cc  Builtins-MODULES.cc  Builtins-QUIT.cc  Builtins.cc  Channel.cc  Command.cc  Container.cc  Database.cc  Makefile.am  Module.cc  ModuleImplementation.cc  Parsers.cc  Player.cc  Thing-Flags.cc  Thing-IO.cc  Thing-Props.cc  Thing-Status.cc  Thing-Types.cc  Thing-Verbs.cc  Thing.cc  Tokens.cc  Universe-Actors.cc  Universe-Create.cc  Universe-Database.cc  Universe-Modules.cc  Universe-Schema.cc  Universe-SystemObjects.cc  Universe-Time.cc  Universe.cc  Variable.cc  Zone.cc
Sources/Modules/: Builder-CREATE.cc  Builder-DESTROY.cc  Builder-EXAMINE.cc  Builder-FLAG.cc  Builder-GO.cc  Builder-LIST.cc  Builder-LOOK.cc  Builder-RENAME.cc  Builder-SET.cc  Builder-TELEPORT.cc  Builder-WHO.cc  Builder.cc  Builder.hh  Builtins-ECHO.cc  Builtins-EDIT.cc  Builtins-LIST.cc  Comms-ECHO.cc  Comms-EMIT.cc  Comms.cc  Comms.hh  Debug-DUMP.cc  Debug.cc  Debug.hh  Guide-HELP.cc  Guide.cc  Guide.hh  Makefile.am
Tools/: Makefile.am
Tools/builder/: Makefile.am  builder.cc
Tools/createdb/: .gitignore  Makefile.am  createdb.cc
Tools/migratedb/: .gitignore  Makefile.am
classic/: db.json  players.json  zones.json
classic/1/: 1.json
classic/101/: 101.desc  101.json  101.text
classic/102/: 102.desc  102.json  102.text
classic/103/: 103.desc  103.json  103.text
classic/104/: 104.desc  104.json
classic/105/: 105.desc  105.json
classic/106/: 106.json
classic/2/: 2.desc  2.json
classic/3/: 3.json
classic/4/: 4.desc  4.json
